# nxr_baxter

./: .gitignore  CMakeLists.txt  README  baxter.urdf  package.xml  readme.md  setup.py
images/: image_files.txt
launch/: cpptest.launch  kinect_start_stop.launch  load_urdf.launch  mime_demo.rviz  puppet_demo.rviz  puppet_demo_cameras.rviz  puppet_grip_demo.launch  startup.launch  test.launch
msg/: MetaMode.msg
src/: To Do List.txt  add_willens_grippers.sh  alvar_rectifier.py  baxter_controller.py  camera_arm.py  clap.py  cpp_test_moveit.cpp  crane.py  cv_sandbox.py  grab.py  idle.py  image_switcher.py  june20thDemo.py  kinematic_tester.cpp  launcher.py  limb.py  meta_mode_controller.py  mimic.py  move_to_neutral.py  moveit_interface.py  process_manager.py  restart_usb.sh  simple_kinect_manager.py  skeleton_filter.py  skeleton_trials.py  subprocess_stuff.py  test_moveit.py  test_plan_speeds.py  test_skel_distance.py  the_robot.py  tracker_heartbeat.py  trajectory.py  trajectory_speed_up.py  trajectory_test_speeds.py  trials.py  usbreset  vector_operations.py  wave.py
